--- a/_posts/2016-06-17-CC150-Ch14-summary.md
+++ b/_posts/2016-06-17-CC150-Ch14-summary.md
@@ -58,5 +58,71 @@ public class Finally {
     }
 }
 ```
+运行结果：
 ![result](https://lisencn11.github.io/img/CC14_Java_finally.png)
+
+# finalize关键字
+
+垃圾回收器会在销毁对象前调用finalize。所以可以覆盖这个方法，自定义垃圾回收的行为。
+
+# 重载(overload) vs 覆盖(override)
+
+**重载**是两个方法名称相同但参数类型或数量不同。
+
+```java
+public double computeArea(Circle c) { ... }
+public double computeArea(Square s) { ... }
+```
+
+**覆盖**子类和超类有相同的名字和函数原型。
+
+```java
+public abstract class Shape {
+    public void printMe() {
+        System.out.println("I am a shape.");
+    }
+
+    public abstract double computeArea();
+}
+
+
+public class Circle extends Shape {
+    private double rad = 5;
+
+    public void printMe() {
+        System.out.println("I am a circle.");
+    }
+
+    public double computeArea() {
+        return rad * rad * 3.14;
+    }
+}
+
+
+public class Ambiguous extends Shape {
+    private double area = 10;
+
+    public double computeArea() {
+        return area;
+    }
+}
+
+
+public class Test {
+    public static void main(String[] args) {
+        Shape[] shapes = new Shape[2];
+        Circle circle = new Circle();
+        Ambiguous ambiguous = new Ambiguous();
+
+        shapes[0] = circle;
+        shapes[1] = ambiguous;
+
+        for (Shape s : shapes) {
+            s.printMe();
+            System.out.println(s.computeArea());
+        }
+    }
+}
+```
+运行结果
 
