--- a/_posts/2016-06-17-CC150-Ch14-summary.md
+++ b/_posts/2016-06-17-CC150-Ch14-summary.md
@@ -125,4 +125,53 @@ public class Test {
 }
 ```
 运行结果
+![result](https://lisencn11.github.io/img/CC14_Java_OverloadvsOverride.png)
 
+# 集合框架(Collection Framework)
+
+### ArrayList
+
+能够动态变化大小的数组
+
+```java
+ArrayList<String> myArr = new ArraList<String>();
+myArr.add("one");
+myArr.add("two");
+System.out.println(myArr.get(0));
+```
+
+### Vector
+
+和ArrayList类似，但是是同步(synchronized)的
+
+```java
+Vector<String> myVect = new Vector<String>();
+myVect.add("one");
+myVect.add("two");
+System.out.println(myVect.get(0));
+```
+
+### LinkedList
+
+对于学习Iterator有帮助
+
+```java
+LinkedList<String> myLinkedList = new LinkedList<String>();
+myLinkedList.add("two");
+myLinkedList.addFirst("one");
+Iterator<String> iter = new myLinkedList.iterator();
+while (iter.hasNext()) {
+    System.out.println(iter.next());
+}
+```
+
+### HashMap
+
+O(1)复杂度增删改查
+
+```java
+HashMap<String, String> map = new HashMap<String, String>();
+map.put("one", "uno");
+map.put("two", "dos");
+System.out.println(map.get("one"));
+```
