--- a/_posts/2016-06-21-CC150-Ch12-summary.md
+++ b/_posts/2016-06-21-CC150-Ch12-summary.md
@@ -1,177 +1,128 @@
 ---
 layout: post
-title: CC150 Chapter 14---Java
-date: 2016-06-17
+title: CC150 Chapter 12---Testing
+date: 2016-06-21
 categories: blog
 tags: [study]
 
 ---
 
-# 思路
+# 测试问题分类
 
-1. 写个例子，问问自己实际中会怎么样。
-2. 问问自己其他语言会怎么样。
-3. 问问自己如果你是语言设计者你会怎么做。
+1. 测试现实世界对象（如钢笔）
+2. 测试一个软件
+3. 为一个函数写测试代码
+4. 定位问题所在
 
-# final关键字
+# 面试官考察点
 
-* 变量：一旦初始化不能改变
-* 方法：不能被子类覆盖
-* 类：不能有子类
+* 产品理解：比如测试电子商务系统（亚马逊），比起图片是否在正确位置而言，支付是否可靠，产品是否加入购物车，顾客从不被多收钱 更重要。
+* 清楚各组件如何协作：是否理解一个软件在一个更大的软件生态系统中如何协作。比如对于测试Google Spreadsheet，测试打开，存储，编辑功能很重要，但测试与Gmail，插件和其它部件的整合效果也很重要
+* 组织逻辑能力：解决问题时，你是否能由组织有逻辑，还是想到什么说什么。比如测试相机，可以分成照相功能，照片管理，系统设定等等。
+* 现实可行性：测试是否可行，比如用户反馈打开照片时程序崩溃，你却告诉他们重装软件，这不现实。你的测试计划应该切实可行。
 
-# finally关键字
+# 测试现实世界对象
 
-finally关键字是和try/catch一起用的，保证这块代码即使在抛出异常的情况下也会执行，这段代码会在try/catch代码块之后，控制转移之前执行。
+### 如何测试一个曲别针
 
-```java
-public class Finally {
-    public static String lem() {
-        System.out.println("lem");
-        return "return from lem";
-    }
+### 谁会使用它？使用的用途？
 
-    public static String foo() {
-        int x = 0;
-        int y = 5;
-        try {
-            System.out.println("start try");
-            int b = y / x;
-            System.out.println("end try");
-            return "return from try";
-        } catch (Exception ex) {
-            System.out.println("catch");
-            return lem() + " | return from catch";
-        } finally {
-            System.out.println("finally");
-        }
-    }
+你需要和面试官沟通曲别针的使用者，用途。可能是老师用来把纸夹在一起，也可能是艺术家弯曲成动物的形状，根据使用者和用途的不同，你的处理方式也会相应改变。
 
-    public static void bar() {
-        System.out.println("start bar");
-        String v = foo();
-        System.out.println(v);
-        System.out.println("end bar");
-    }
+### 用例
 
-    public static void main(String[] args) {
-        bar();
-    }
-}
-```
-运行结果：
-![result](https://lisencn11.github.io/img/CC14_Java_finally.png)
+>用例(use case): A use case is a series of related interactions between a user (or more generally, an “actor”) and a system that enables the user to achieve a goal.
 
-# finalize关键字
+你需要列出用例，在本例中，用例只是简单的把纸无损地固定在一起，在其它问题中，可能会有多个用例。
 
-垃圾回收器会在销毁对象前调用finalize。所以可以覆盖这个方法，自定义垃圾回收的行为。
+### 使用边界(bounds of use)
 
-# 重载(overload) vs 覆盖(override)
+使用边界意思是，曲别针对于30页以下可以做到无损，30到50页可以做到微小损坏。
 
-**重载**是两个方法名称相同但参数类型或数量不同。
+使用边界也可以扩展到环境因素。比如曲别针是否需要在极热或极寒条件下使用。
 
-```java
-public double computeArea(Circle c) { ... }
-public double computeArea(Square s) { ... }
-```
+### 压力/失败条件
 
-**覆盖**子类和超类有相同的名字和函数原型。
+任何产品都肯定有失败条件，分析失败条件也是测试的一部分。和你的面试官讨论何时失败是可以接受的，失败的方式是什么。
 
-```java
-public abstract class Shape {
-    public void printMe() {
-        System.out.println("I am a shape.");
-    }
+比如测试洗衣机：最多可以洗30件衣服；30-45件会有小失败，比如没洗干净；45件以上是严重失败，这是可以接受的。但严重失败应该是洗衣机不转动，而不是让家里发洪水或者电路故障。
 
-    public abstract double computeArea();
-}
+### 如何测试
 
+比如你想测试一个椅子在普通使用下能用5年。显然放在屋里用5年不可行，你可以定义普通使用是每年坐多少次，然后交给机器进行测试。
 
-public class Circle extends Shape {
-    private double rad = 5;
+# 测试一个软件
 
-    public void printMe() {
-        System.out.println("I am a circle.");
-    }
+* 手动vs自动：我们自然喜欢自动测试，但有些特性机器无法检测，比如内容是否违规。此外，机器只能按照我们定义的规则测试，但人类可能发现一些没想到的新问题。
+* 黑盒vs白盒：黑盒测试我们不了解软件内部，白盒测试我们了解软件内部。
 
-    public double computeArea() {
-        return rad * rad * 3.14;
-    }
-}
+### 1. 黑盒测试还是白盒测试？
 
+和你的面试官沟通是黑盒还是白盒。
 
-public class Ambiguous extends Shape {
-    private double area = 10;
+### 2. 使用者？用途？
 
-    public double computeArea() {
-        return area;
-    }
-}
+比如测试一个年龄管制浏览器：使用者有家长，儿童和游客；用途是实施屏蔽，接受屏蔽，什么都不做。
 
+### 3. 用例？
 
-public class Test {
-    public static void main(String[] args) {
-        Shape[] shapes = new Shape[2];
-        Circle circle = new Circle();
-        Ambiguous ambiguous = new Ambiguous();
+以年龄管制浏览器为例。家长用例包括：安装，更新管制，移除管制，家长自己的网络使用。儿童用例包括：浏览合法内容。
 
-        shapes[0] = circle;
-        shapes[1] = ambiguous;
+谨记用例不由你决定，而是你和面试官沟通决定。
 
-        for (Shape s : shapes) {
-            s.printMe();
-            System.out.println(s.computeArea());
-        }
-    }
-}
-```
-运行结果
-![result](https://lisencn11.github.io/img/CC14_Java_OverloadvsOverride.png)
+### 4. 使用边界
 
-# 集合框架(Collection Framework)
+明确用例。比如是屏蔽当前网页还是整个网站？软件是否有自我学习能力还是根据黑白名单？如果有自我学习能力，误检率多少可以接受？
 
-### ArrayList
+### 5. 压力/失败条件
 
-能够动态变化大小的数组
+显然，当软件失败，不能使电脑崩溃。可能失败时是放过了一个应该屏蔽的网页，或者屏蔽了一个安全的网页，当后者发生，家长应该可以通过密码对网页进行访问。
 
-```java
-ArrayList<String> myArr = new ArraList<String>();
-myArr.add("one");
-myArr.add("two");
-System.out.println(myArr.get(0));
-```
+### 6. 测例？如何测试？
 
-### Vector
+手动测试还是自动测试？黑盒测试还是白盒测试？分成哪几个主要部件，分别讨论。
 
-和ArrayList类似，但是是同步(synchronized)的
+# 为一个函数写测试代码
 
-```java
-Vector<String> myVect = new Vector<String>();
-myVect.add("one");
-myVect.add("two");
-System.out.println(myVect.get(0));
-```
+需要注意特殊情况的处理，比如写一段代码测试**sort(int[] array)**。
 
-### LinkedList
+### 1. 定义测试用例
 
-对于学习Iterator有帮助
+* 正常测试：对于一般输入是否输出正确结果？思考所有的可能性，比如排序通常需要划分，那么奇数个数和偶数个数都要测试。
+* 极端测试：空数组？一个元素的数组？非常大的数组？
+* 空输入和非法输入：比如测试斐波纳切数，当n为负数？
+* 奇怪输入：输入是一个排好序的数组，或反序排列的数组？
 
-```java
-LinkedList<String> myLinkedList = new LinkedList<String>();
-myLinkedList.add("two");
-myLinkedList.addFirst("one");
-Iterator<String> iter = new myLinkedList.iterator();
-while (iter.hasNext()) {
-    System.out.println(iter.next());
-}
-```
+### 2. 定义期待输出
 
-### HashMap
+是输出新数组还是远数组？输出新数组的话原数组是否被改变？
 
-O(1)复杂度增删改查
+### 3. 写测试代码
 
-```java
-HashMap<String, String> map = new HashMap<String, String>();
-map.put("one", "uno");
-map.put("two", "dos");
-System.out.println(map.get("one"));
-```
+# 定位问题所在
+
+简单来说就是考察debug。
+
+假设你在Google Chrome组，收到一个bug，“打开时崩溃”，你应该怎么做？
+
+### 1. 理解问题
+
+* 问题出现多久了？
+* 浏览器版本？操作系统？
+* 问题是否持续出现？出现频率？什么时候开始出现？
+* 是否有错误报告显示出来？
+
+### 2. 分解问题
+
+1. 前往Windows开始菜单
+2. 点击Chrome按钮
+3. 浏览器启动
+4. 浏览器加载设定
+5. 浏览器发起HTTP请求
+6. 浏览器的到HTTP回复
+7. 浏览器分析网页
+8. 浏览器现实内容
+
+上面某步存在问题，依次检查分析问题。
+
+### 3. 进行测试
