--- a/_posts/2016-06-22-CC150-Ch12-Questions.md
+++ b/_posts/2016-06-22-CC150-Ch12-Questions.md
@@ -93,4 +93,25 @@ foreach piece a:
 * 用途：衣服画画。是否正常在衣服上画画？
 * 用途：可洗。是否可以从衣服上洗掉（即是很长时间后）？在热水，温水，冷水中洗掉？
 * 安全：是否无毒？
-* 
+* 非目的用途：儿童还可能如何使用？踩，扔？确保钢笔经受住考验。
+
+### 如何测试一个分布式银行系统的ATM机
+
+首先，搞清楚问题的前提条件：
+
+* 谁会使用这台ATM机？是任何人，还是盲人，还是其他什么人？
+* 用途是什么？取钱，转账，查询余额，还是有其他什么用途？
+* 我们有什么测试工具？我们能接触到代码还是只能接触ATM机
+
+然后，分解问题：
+
+* 登陆
+* 取钱
+* 存钱
+* 查询余额
+* 转账
+
+最后，手动测试与自动化测试：
+
+* 手动测试遍历上面的步骤，保证检查到所有情形（余额不足，新账户，不存在的账户等等）
+* 自动化测试包括自动化所有标准情景，以及竞争等特殊情境。即即是同一用户同一时间在不同地点存取钱，他也不会获得或者失去意料之外的钱。
