--- a/_posts/2016-06-24-Rate-Rise.md
+++ b/_posts/2016-06-24-Rate-Rise.md
@@ -1,203 +1,80 @@
 ---
 layout: post
-title: Rate Rise
+title: 美元加息的含义和目的是什么？
 date: 2016-06-24
 categories: blog
 tags: [collection]
 
 ---
 
-# 排序算法(Sorting Algorithm)
+原文转载自[知乎素履](https://www.zhihu.com/people/lyzbeishida)，侵删。
 
-### 冒泡排序(Bubble Sort)
+# 加的是什么息？——联邦基金利率
 
-最坏情况O(n<sup>2</sup>)时间复杂度。O(1)空间复杂度。  
-从数组第一对数开始，如果前比后大则调换顺序，一直到最后一对，这是一趟冒泡排序，保证最后一个数字是最大的，进行n趟或直到一次冒泡没有调换顺序为止。
+按照美联储的要求，美国所有吸收储户存款的金融机构在美联储都有各自的储备金账户。这个账户主要是为了应付储户潜在的突然提款需要。美联储会设定存款准备金率,各金融机构的储备金账户内金额占其所吸纳的短期存款的比例不能低于这一数字。
 
-### 选择排序(Selection Sort)
+如果某个金融机构的储备金低于存款准备金率,必须筹集资金补足储备金账户。如果高于,金融机构可以随时取走多余部分。一般，储备金不足的银行会向储备金过剩的银行进行短期贷款来筹集资金。市场上这种短期贷款利率被称为联邦基金利率。
 
-最坏情况O(n<sup>2</sup>)时间复杂度。O(1)空间复杂度。  
-第一趟，遍历所有数，找到最小的，移到第一个位置。第二趟，找到除第一个数外最小的，移到第二个位置。重复n趟。
+联邦基金利率是银行间的贷款利率,而不是美联储向银行贷款的利率。多数情况下,美联储并不直接向银行贷款,而是通过公开市场操作来影响联邦基金利率。公开市场操作是指美联储通过买卖债券向市场投放或者收回货币的行为。比如美联储买入债券时,付给对方美元,就增加了市场中美元的供应；反之,美联储卖出债券时,就从市场收回了美元。这种操作被称为公开市场操作,因为市场上所有达到要求的金融机构都可以申请和美联储进行交易。这样可以避免美联储在具体操作过程中滥用职权,和个别金融机构进行私下交易。哪些机构可以和美联储在公开市场上交易，以及成为美联储交易商需要具备哪些条件等，美联储的网站都公布了相关信息,以方便公众监督。
 
-### 归并排序(Merge Sort)
+公开市场委员会设定联邦基金利率目标后,美联储通过公开市场操作改变市场上货币的发行量,实现预先设定的目标利率。举个简单的例子。比如目前市场上的联邦基金利率是2.5%,而公开市场委员会决定把利率提高到2.75%。为实现这个目标,美联储在公开市场上卖出债券,收回货币。这时金融机构持有的货币减少,超额储备金降低,银行间储备金的贷款利率上升。美联储进行这种操作,直到联邦基金利率达到2.75%的目标利率。如果美联储希望降低联邦基金利率,反向操作(买入债券,放出货币)就可以了。
 
-最坏情况O(nlogn)时间复杂度。O(n)空间复杂度。  
-将数组对半分，对每一半使用相同的排序算法，然后将他们合并。
+联邦基金利率的变化会直接影响其他短期利率，之后会进一步改变长期利率，后者的变化又会影响到消费和投资，进而影响经济形势。
 
-```java
-import java.util.Random;
+# 加息的经济背景及连续加息的特征
 
-public class MergeSort {
-    public final static int RANDOMNUMBER = 20;
+引自广证恒生《宏观经济策略研究：美联储加息之前世今生》：
 
-    public static void mergesort(int[] array) {
-        int[] helper = new int[array.length];
-        mergesort(array, helper, 0, array.length - 1);
-    }
+>美联储职责在于降低过高的失业率、维持合理的通胀水平和稳定金融市场。回顾以往每轮加息周期开始时，美国国内的宏观经济特征主要有：经济企稳、GDP 稳步增长； CPI回升至 2%之上；就业数据表现良好，失业率较低； 10 年期国债收益率处于较低水平。![rate0](https://pic2.zhimg.com/c44f32dd732897b370600d50182968f5_b.jpg)加息表现为连续加息，而非一次上调息率至目标利率。 在过去的 5 次加息过程中，平均每轮连续加息次数为 11 次， 平均每次上调 27bp。 加息次数最少的周期是 1999 年 6 月-2000 年 5 月，加息 6 次；次数最多的是 2004 年 6 月-2006 年 6 月，加息 17 次。
 
-    public static void mergesort(int[] array, int[] helper, int low, int high) {
-        if (low < high) {
-            int middle = low + (high - low) / 2;
-            mergesort(array, helper, low, middle);
-            mergesort(array, helper, middle + 1, high);
-            merge(array, helper, low, middle, high);
-        }
-    }
+>美联储采取逐步加息的方法，一是因为能给予市场一定的缓冲时间， 避免快速减少流动性所带来经济冲击， 二是在加息的过程，美联储亦同时观察经济的发展状况，一旦出现超出加息前所预期的市场波动或经济效应，则可以及时停止，甚至改变货币政策的方向。
 
-    public static void merge(int[] array, int[] helper, int low, int middle, int high) {
-        for (int i = low; i <= high; i++) {
-            helper[i] = array[i];
-        }
+# 对新兴市场的影响是什么？
 
-        int helperLeft = low;
-        int helperRight = middle + 1;
-        int current = low;
+在美联储加息背景下，新兴市场主要面对的是资本外流风险。国际投资者对于新兴市场的信心较为脆弱，在美国经济出现复苏后，对新兴市场的资产兴趣开始减弱。尤其在美联储加息的预期下，国际投资者对美元的信心开始增加，资本撤出新兴市场，转而投向美国市场。
 
-        while (helperLeft <= middle && helperRight <= high) {
-            if (helper[helperLeft] <= helper[helperRight]) {
-                array[current] = helper[helperLeft];
-                helperLeft++;
-            } else {
-                array[current] = helper[helperRight];
-                helperRight++;
-            }
-            current++;
-        }
+逻辑：美国加息→世界储备货币收缩→资本迅速回流以美国为中心的发达国家→外围新兴市场资本外逃→新兴市场货币贬值、资产价格下跌→危机显现。
 
-        int remaining = middle - helperLeft;
-        for (int i = 0; i <= remaining; i++) {
-            array[current + i] = helper[helperLeft + i];
-        }
-    }
+抗压能力好的经济体受到的影响较轻，但一些抗压能力较弱的经济体将遭受动荡，严重的甚至会引发金融危机。伴随着美国 5 次加息大周期，新兴市场因美元强势、 热钱流出出现了泡沫破裂，其中具有代表性的包括 1982 年拉美债务危机、 1989 年台湾泡沫破灭、 1994年墨西哥比索危机、 1999 年巴西、阿根廷危机与 2008 年全球金融危机对新兴市场造成的冲击较大。
 
-    public static void main(String[] args) {
-        Random randomGenerator = new Random();
-        int[] randoms = new int[RANDOMNUMBER];
+![rate1](https://pic3.zhimg.com/613f9634a71a07dc8f4bec9db068832e_b.png)
 
-        System.out.println("Before Sorting:");
-        for (int i = 0; i < RANDOMNUMBER; i++) {
-            randoms[i] = randomGenerator.nextInt(100);
-            System.out.print(randoms[i] + " ");
-        }
-        System.out.println();
+# 分析对中国的影响前，先理解蒙代尔不可能三角
 
-        MergeSort.mergesort(randoms);
+引自许哲“西塔”微信平台：
 
-        System.out.println("After Sorting:");
-        for (int i = 0; i < RANDOMNUMBER; i++) {
-            System.out.print(randoms[i] + " ");
-        }
-        System.out.println();
-    }
-}
-```
+>先理清楚一个理论：蒙代尔不可能三角。主要义理是：一个经济体的货币自主权、汇率稳定和资本自由流动之间，必须舍弃一个，不能三者兼得。
 
-注意merge()最后只需要对左半边进行处理，因为如果剩下的是右半边，那么已经在所在位置了。
+>什么叫货币政策的自主性，意味着这个经济体内它的央行是可以随便决定我要放货币了，我要收回这个流动性了，这对一个国家的主权来说是很重要的。资本的自由流动是什么，外国人可以随便进来投资或者撤资，汇率的稳定就是这个汇率不怎么会动的。三者为什么不可兼得？
 
-### 快速排序(Quick Sort)
+>如果我们资本要自由流动，汇率要稳定，比如香港资本是可以自由流动的，也可以进行撤出的，港币兑美元汇率基本上是固定的，也是非常稳定，因为如果有一笔很大的资金流入香港，而美元跟港币的货币又是稳定的话，意味着什么？意味着有一笔资金进入香港的话，港币的供应总量就上升了，如果外资要从香港撤出去，我们港币的总供应量就减少了。也就是说如果你既是要求资本流动，又要汇率稳定的话，那你就要丧失个国家的货币自主权，事实上就是联系汇率策略。
 
-平均情况O(nlogn)时间复杂度，最坏情况O(n<sup>2</sup>)时间复杂度。O(logn)空间复杂度。  
-随机取一个数划分数组，所有比这个数小的数都在比这个数大的数前面。理想情况下，我们取到中位数，然而这并不现实，所以有最坏O(n<sup>2</sup>)的时间复杂度。
+>如果我们国家放水跟不放水，央行要有自主权，我们又要资本自由流动的话会怎么样？比如英国央行对英镑的总供应量是有自主权的，而英国又允许资本自由流动，如果英镑放水了，资本流出，怎么办？英镑只能跌价，因为英镑变多了，资本又流出了，英镑就只能跌价了，这个是主流国家选用的方式，叫“汇率浮动机制”。
 
-```java
-import java.util.Random;
+>你们可以看到我们又要货币的自主性，允许资本自由流动的话，汇率必然是浮动的，如果我们又要汇率稳定，央行放水不放水又要自己能够决定，那就只能牺牲最后一点，你要放弃资本自由流动，这就是中国现在的资本管制模式。如果要换美元的话，一年一个人5万美金，这是典型的资本管制，因为我们要稳定汇率，中国是出口大国，掌握货币政策的绝对自主，意味着我们要损失资本的自由流进流出。
 
-public class ModifyQuickSort {
-    public final static int RANDOMNUMBER = 20;
+>中国目前实行的是央行要有货币主动权，并且作为出口大国，需要稳定的汇率，故而要实行资本管制，也就是蒙代尔不可能三角的最后一种选择。然而，资本管制本身是不可能的。（在量化宽松大背景之下，国际资本在各类虚假贸易、 FDI、短期债务等资本科目的庇护下大量流入新兴市场从事套息交易）
 
-    public static void quicksort(int[] array) {
-        quicksort(array, 0, array.length - 1);
-    }
+>如果资本管制实际无效，那央行是会放弃货币的自主权（央行发钞权），还是放弃让进出口商和外债持有者比较难受的汇率稳定呢？所以，人民币汇率必定贬值。
 
-    public static void quicksort(int[] array, int left, int right) {
-        if (left < right) {
-            int index = partition(array, left, right);
-            quicksort(array, left, index - 1);
-            quicksort(array, index + 1, right);
-        }
-    }
+# 对中国的影响分析：
 
-    public static int partition(int[] array, int left, int right) {
-        int pivot = array[left];
-        while (left < right) {
-            while (left < right && array[right] >= pivot) right--;
-            if (left < right) array[left++] = array[right];
-            while (left < right && array[left] < pivot) left++;
-            if (left < right) array[right--] = array[left];
-        }
-        array[left] = pivot;
-        return left;
-    }
+**人民币汇率贬值**：尽管目前我国的外汇储备较高，但要维持人民币汇率的消耗，也无法长期支撑。
 
-    public static void main(String[] args) {
-        Random randomGenerator = new Random();
-        int[] randoms = new int[RANDOMNUMBER];
+**资本外流风险可控**：一、中国外债：总体负债率仍然保持在风险控制范围内；二、高外汇储备：美联储加息直接带动美元进入上升周期，美元成为高安全边际的资产。这时，中国的美元储备将会随之升值，为风险做防御。
 
-        System.out.println("Before Sorting:");
-        for (int i = 0; i < RANDOMNUMBER; i++) {
-            randoms[i] = randomGenerator.nextInt(100);
-            System.out.print(randoms[i] + " ");
-        }
-        System.out.println();
+总体来看，尽管中国经济增长放缓，但总的经济增速依旧排在全球前列，按照姜超的说法，这不是一个比哪国经济好，而是哪国经济更不烂的时期。因此中国对境外投资者依旧具有吸引力， 资本外流威胁并不大。
 
-        ModifyQuickSort.quicksort(randoms);
+# 附件：美元加息引发的血案
 
-        System.out.println("After Sorting:");
-        for (int i = 0; i < RANDOMNUMBER; i++) {
-            System.out.print(randoms[i] + " ");
-        }
-        System.out.println();
-    }
-}
-```
+引自许哲“西塔”微信平台：
 
-这段代码思路来源于[MoreWindows的博客](http://blog.csdn.net/morewindows/article/details/6684558)，我认为在划分的实现上比CC150的代码更加简洁易懂，即挖坑填数法。
+>我们来回顾过往的几次美元周期的过程：
 
-### 基数排序(Radix Sort)
+>第一次宽松到紧缩 20世纪70年代第一次石油危机过后，美联储开始不断降低利率水平，增加的流动性外溢到其他发展中国家。另一方面，石油危机导致油价大涨，石油是以美元计价，石油输出国获得大量的美元，他们将美元存入欧洲的银行中，欧洲银行再将美元借给拉美等发展中国家。拉美国家外债在70年代迅速膨胀，例如巴西、阿根廷外债增长速度都一度超过50%。
 
-O(n)时间复杂度。O(logn)空间复杂度。  
-与比较排序不同，技术排序能够达到O(n)的复杂度。但是需要保证待排序数组中的所有数都属于一个有限的范围
+>第二次宽松到紧缩1978年第二次石油危机爆发，79年保罗沃尔克就任美联储主席，采取强硬手段抑制通胀上升。沃尔克将联邦基金利率从10%以下提升到20%以上，贷款利率也提升至20%以上。欧洲及其他发达国家为遏制通胀，也纷纷跟随美国加息。美国加息导致的结果有三点，第一，美元指数大幅度走强，大宗商品价格下跌。巴西、阿根廷等大宗商品出口大国国际收支条件恶化，引发债权人对其偿债能力的担忧。第二，资本向高息资产靠拢，从拉美国家流出。拉美国家出口的恶化也导致资本恐慌性逃出。第三，利率水平提高，拉美国家再融资困难。一方面，美国紧缩减少了全球的流动性。另一方面，美国加息，拉美国家也要被动加息，否则将面临货币贬值和资本大规模流出风险。国际利率提高，拉美国家再融资成本增加。债务危机由此爆发。
 
-# 查找算法(Searching Algorithm)
+>第三次宽松到紧缩80年代第二次石油危机后，美国不断下调基准利率，1985年广场协议达成，美国的货币宽松速度加快。导致的结果是日元大幅度升值，日元对美元汇率从248的水平在一年内下降到164，日元急速升值给出口依赖型的日本经济以沉重的打击。为了刺激经济和避免日元过快升值，日本也被迫大幅下调基准利率（尽管此时日本的通胀并不算低），且89年之前日本都维持了相对宽松的货币政策。长期的货币宽松滋生了股市和房地产市场的泡沫。1985年9月至1989年12月，日经225指数上涨了200%，全国城市土地价格上涨了44.5%。美国收紧货币，日本随之紧缩导致泡沫破灭。持续宽松导致美国通胀抬头，美国货币政策在1986年后逐步收紧。日本若继续维持宽松，势必面临货币贬值和资本外逃压力。同时出于遏制房价和股市过快上涨的考虑，日本也在1989年开始加息。货币政策的突然转向导致房地产和股市的崩盘，银行业也受到重创，日本经济转入萧条。
 
-当我们说到查找算法，我们通常想到二分查找。
-
-二分查找要求数组**有序**，我们把目标与数组中位数比较，若比中位数大则在右半边继续查找，否则则在左半边继续查找，直到找到目标。
-
-```java
-public class BinarySearch {
-    public final static int TARGET = 49;
-
-    public static int binarySearch(int[] array, int target) {
-        int low = 0;
-        int high = array.length - 1;
-        int mid = low + (high - low) / 2;
-
-        while (low < high) {
-            mid = low + (high - low) / 2;
-            if (array[mid] > target) {
-                high = mid - 1;
-            } else if (array[mid] < target) {
-                low = mid + 1;
-            } else {
-                return mid;
-            }
-        }
-        if (array[low] == target) {
-            return low;
-        } else {
-            return -1;
-        }
-    }
-
-    public static void main(String[] args) {
-        int[] array = {6, 7, 8, 8, 10, 12, 19, 26, 36, 49, 49, 49, 57, 61, 62, 65, 73, 74, 86, 88};
-        int index = BinarySearch.binarySearch(array, TARGET);
-        System.out.println("search " + TARGET + " in: ");
-        for (int i = 0; i < array.length; i++) {
-            System.out.print(array[i] + " ");
-        }
-        System.out.println("\nindex of target is " + index);
-    }
-}
-```
+>第四次宽松到紧缩89年5月至92年9月间，美联储连续降息24次，联邦基金目标利率从9.81%下调到3%。为了避免本币对美元大幅升值影响出口，亚洲各国也纷纷降息，但降息后的水平依然远高于美国。同时在90年代初，泰国、韩国、印尼等国经济增速普遍在7%以上，创造了“亚洲奇迹”。高利率和高增长使得亚洲国家吸引国际资本、尤其是热钱大量流入。此外，宽松环境下，亚洲国家外债增长较快。以首先爆发危机的泰国为例，90年代初外债增速几乎在20%以上，95年高达53%。外债激增也为金融危机爆发埋下了伏笔。1994年美国货币政策突然转向，在一年之内目标利率从3%增加到6%。美国短时间内成为更有吸引力的投资地。亚洲各国面临资本外逃和货币贬值压力，也纷纷跟随美联储收紧货币供给。然而受房地产泡沫破灭影响，90年代日本经济放缓。此时的亚洲各国汇率依然死盯美元，但是出口放缓和美国加息导致货币贬值压力较大。泰国、菲律宾、印尼、马来西亚等国货币成为国际炒家攻击的重点，外汇储备大量消耗，最终只能放弃固定汇率，爆发大范围的金融、债务危机。
