--- a/_posts/2016-06-24-CC150-Ch11-Questions.md
+++ b/_posts/2016-06-24-CC150-Ch11-Questions.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: CC150 Chapter 11---Testing Questions
-date: 2016-06-22
+title: CC150 Chapter 11---Sorting Questions
+date: 2016-06-24
 categories: blog
 tags: [study]
 
